# telegram_meme_bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-builder  Dockerfile-diesel  Dockerfile-prod  Dockerfile-tests  README.md  docker-compose.yml  initd.sh
.github/workflows/: build.yml  docker.yml  rust.yml
messages/: help_text_addition.in  left.in  meme_already_exists.in  newbie.in  similar_meme.in  stats.in
migration/: Cargo.toml
migration/src/: lib.rs  m20240524_200516_create_memes_table.rs  m20240524_200524_create_meme_likes_table.rs  m20240524_200536_create_users_table.rs  m20240524_200553_create_chats_table.rs  m20240524_200600_create_messages_table.rs  m20240524_200614_create_chat_admins_table.rs  m20240531_121814_modify_messages_table.rs  m20240531_143248_insert_data_to_messages.rs  m20240602_073326_add_foreign_keys.rs
migrations/2022-12-11-151645_memes/: down.sql  up.sql
migrations/2022-12-11-151727_meme_likes/: down.sql  up.sql
migrations/2023-01-17-194902_users/: up.sql
migrations/2023-01-17-195100_chats/: down.sql  up.sql
migrations/2023-01-26-160008_add_hash_columns/: down.sql  up.sql
migrations/2023-02-01-065917_update_chats/: down.sql  up.sql
migrations/2023-05-13-205804_add_messages/: up.sql
migrations/2023-05-13-205830_add_chat_admins/: down.sql  up.sql
src/: bot.rs  database.rs  db.rs  db_connection.rs  handlers.rs  main.rs  models.rs  repository.rs  scheduler.rs  schema.rs  utils.rs
src/app/: imghash.rs  mod.rs  utils.rs
src/bot/: callbacks.rs  commands.rs  handlers.rs  markups.rs  messages.rs  mod.rs  statistics.rs  top.rs  types.rs  utils.rs
src/bot/private/: commands.rs  messages.rs  mod.rs
src/bot/private/admin/: callbacks.rs  commands.rs  messages.rs  mod.rs  types.rs
src/bot/public/: callbacks.rs  commands.rs  markups.rs  messages.rs  mod.rs  types.rs
src/database/: manager.rs  mod.rs  models.rs  repository.rs  schema.rs
src/database/entity/: chat_admins.rs  chats.rs  meme_likes.rs  memes.rs  messages.rs  mod.rs  prelude.rs  users.rs
src/nats/: messages.rs  mod.rs
src/redis/: mod.rs
