[package]
name = "tg_meme_bot"
version = "0.9.1"
edition = "2021"

[profile.docker]
inherits = "dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Telegram Bot Library
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
# Logs Libraries
log = "0.4"
pretty_env_logger = "0.5"
# Env Files Loader
dotenv = "0.15"
# Comand-Line Arguments
clap = { version = "4.0", features = ["derive"] }
# Database tools
diesel = { version = "2.1", features = ["postgres", "extras"] }
now = "0.1"
uuid = { version = "1.2", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.23", features = ["tokio-comp", "r2d2"] }
emojis = "0.6.0"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
opencv = "0.78.0"
anyhow = "1.0"
