[package]
name = "tg_meme_bot"
version = "0.12.3"
edition = "2021"

[profile.docker]
inherits = "dev"

[profile.release]
lto = "fat"
strip = "debuginfo"
opt-level = "z"
panic = "abort"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Telegram Bot Library
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
# Logs Libraries
log = "0.4"
pretty_env_logger = "0.5"
# Env Files Loader
dotenv = "0.15"
# Comand-Line Arguments
clap = { version = "4.0", features = ["derive"] }
# Database tools
diesel = { version = "2.1", features = ["postgres", "extras"] }
now = "0.1"
uuid = { version = "1.2", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp", "r2d2"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
opencv = { version = "0.88", default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs"] }
anyhow = "1.0"
itertools = "0.12.0"
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
once_cell = "1.18.0"
sentry = "0.32.1"
clokwerk = "0.4.0"
envconfig = "0.10.0"
async-nats = "0.33.0"
